{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 125,
  "lineage": "1bcf327c-00ec-ab76-4cc9-522a7a5de82b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2022-11-14T11:00:21.779-08:00",
            "deny": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "description": "Creates firewall rule targeting  instances of gke",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mohamed-morshed/global/firewalls/my-firewall-rule",
            "name": "my-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/networks/myvpc",
            "priority": 1000,
            "project": "mohamed-morshed",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/firewalls/my-firewall-rule",
            "source_ranges": [
              "10.3.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myvpc",
            "google_compute_subnetwork.sub2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "81",
                  "82"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-14T11:00:32.185-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting  instances of input for gke",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mohamed-morshed/global/firewalls/my-firewall-rule2",
            "name": "my-firewall-rule2",
            "network": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/networks/myvpc",
            "priority": 1000,
            "project": "mohamed-morshed",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/firewalls/my-firewall-rule2",
            "source_ranges": [
              "10.2.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myvpc",
            "google_compute_subnetwork.sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-14T11:00:02.764-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting  instances of input for gke",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/mohamed-morshed/global/firewalls/my-firewall-rule3",
            "name": "my-firewall-rule3",
            "network": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/networks/myvpc",
            "priority": 1000,
            "project": "mohamed-morshed",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/firewalls/my-firewall-rule3",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/zones/us-east1-b/disks/privitevm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/mohamed-morshed/zones/us-east1-b/instances/privitevm",
            "instance_id": "5401568698196504254",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "gz6Sx1kI7bk=",
            "name": "privitevm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/networks/myvpc",
                "network_ip": "10.2.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/regions/us-east1/subnetworks/management",
                "subnetwork_project": "mohamed-morshed"
              }
            ],
            "project": "mohamed-morshed",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/zones/us-east1-b/instances/privitevm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.myvpc",
            "google_compute_subnetwork.sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/mohamed-morshed/global/networks/myvpc",
            "name": "myvpc",
            "project": "mohamed-morshed",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/networks/myvpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T11:00:03.417-08:00",
            "id": "projects/mohamed-morshed/regions/us-east1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/networks/myvpc",
            "project": "mohamed-morshed",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/regions/us-east1/routers/my-router"
          },
          "dependencies": [
            "google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "mohamed-morshed/us-east1/my-router/my-router-nat",
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "mohamed-morshed",
            "region": "us-east1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "management",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.myvpc",
            "google_compute_router.router",
            "google_compute_subnetwork.sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T11:00:03.520-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/mohamed-morshed/regions/us-east1/subnetworks/management",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "management",
            "network": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/networks/myvpc",
            "private_ip_google_access": false,
            "project": "mohamed-morshed",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.10.0/24",
                "range_name": "tf-test-secondary-range-update1"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/regions/us-east1/subnetworks/management"
          },
          "dependencies": [
            "google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T11:00:03.589-08:00",
            "gateway_address": "10.3.0.1",
            "id": "projects/mohamed-morshed/regions/us-east1/subnetworks/restricted",
            "ip_cidr_range": "10.3.0.0/16",
            "name": "restricted",
            "network": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/global/networks/myvpc",
            "private_ip_google_access": false,
            "project": "mohamed-morshed",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.20.0/24",
                "range_name": "tf-test-secondary-range-update2"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mohamed-morshed/regions/us-east1/subnetworks/restricted"
          },
          "dependencies": [
            "google_compute_network.myvpc"
          ]
        }
      ]
    }
  ]
}